# Rk3568-ClusterApp

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
Animation/: .gitignore  CMakeLists.txt  animation.ini
Animation/BootAnimationService/franca/BootAnimationService/instance/: BootAnimationService_instance.fdepl
Animation/BootAnimationService/franca/BootAnimationService/interface/: BootAnimationService.fdepl  BootAnimationService.fidl
Animation/include/: AnimationController.h  AnimationDisplayController.h  AnimationServiceImpl.h  CommonApi.h  DrmController.h  ImageLoader.h  ThreadPool.h  stb_image.h
Animation/src/: AnimationController.cpp  AnimationDisplayController.cpp  AnimationServiceImpl.cpp  DrmController.cpp  ImageLoader.cpp  main.cpp
HMI/: HMI.pro  HMI.qmlproject  qml.qrc  resource.qrc
HMI/asset_imports/Quick3DAssets/SpeedMeter/: SpeedMeter.qml  _importdata.json  qmldir
HMI/asset_imports/Quick3DAssets/SpeedMeter/_icons/: SpeedMeter_libicon  SpeedMeter_libicon@2x
HMI/asset_imports/Quick3DAssets/SpeedMeter/meshes/: speedMeter_Bar.mesh  speedMeter_Bg.mesh
HMI/asset_imports/Quick3DAssets/SpeedMeter/source scene/: SpeedMeter.FBX
HMI/asset_imports/Quick3DAssets/TachMeter/: TachMeter.qml  _importdata.json  custom_material_default_shader.frag  qmldir
HMI/asset_imports/Quick3DAssets/TachMeter/_icons/: TachMeter_libicon  TachMeter_libicon@2x
HMI/asset_imports/Quick3DAssets/TachMeter/meshes/: tachSpeedMeter_Bar.mesh  tachSpeedMeter_Bg.mesh
HMI/asset_imports/Quick3DAssets/TachMeter/source scene/: TachMeter.FBX
HMI/content/: Adas_Dark.ui.qml  Adas_Light.ui.qml  App.qml  BaseInfo_Dark.ui.qml  BaseInfo_Light.ui.qml  CenterView_Dark.ui.qml  CenterView_Light.ui.qml  DigitalDisplay_Dark.qml  DigitalDisplay_Light.qml  DoorCover_Dark.ui.qml  DoorCover_Light.ui.qml  DoorCover_OFF_Dark.ui.qml  DoorCover_OFF_Light.ui.qml  Gauge_Dark.ui.qml  Gauge_Light.ui.qml  InvertEffect.qml  RadarAlarm_Dark.ui.qml  RadarAlarm_Light.ui.qml  Screen01.ui.qml  SeatBelt_Dark.ui.qml  SeatBelt_Light.ui.qml  SpeedDial.ui.qml  SpeedProgress.qml  TachoDial.ui.qml  Telltale.ui.qml  Telltale_OFF.ui.qml  TirePressure_Dark.ui.qml  TirePressure_Light.ui.qml  TripComputer_Dark.ui.qml  TripComputer_Light.ui.qml  WarningPopup_Dark.ui.qml  WarningPopup_Light.ui.qml  WarningPopup_OFF_Dark.ui.qml  WarningPopup_OFF_Light.ui.qml  WaterAndOilProgress_Dark.qml  WaterAndOilProgress_Light.qml
HMI/content/shaders/: Textured_ELe.frag  Textured_ELe.vert
HMI/src/: BaseInfoDataModel.cpp  BaseInfoDataModel.h  CenterViewDataModel.cpp  CenterViewDataModel.h  DataModel.h  GaugeDataModel.cpp  GaugeDataModel.h  TelltaleDataModel.cpp  TelltaleDataModel.h  WarningPopupDataModel.cpp  WarningPopupDataModel.h  main.cpp
HMI/src/linux/: BaseInfoDataModel.cpp  BaseInfoDataModel.h  CenterViewDataModel.cpp  CenterViewDataModel.h  GaugeDataModel.cpp  GaugeDataModel.h  TelltaleDataModel.cpp  TelltaleDataModel.h
HMI/src/win/: BaseInfoDataModel.cpp  CenterViewDataModel.cpp  CenterViewDataModel.h  GaugeDataModel.cpp  GaugeDataModel.h  TelltaleDataModel.cpp  TelltaleDataModel.h  WarningPopupDataModel.cpp  WarningPopupDataModel.h
HMIControllers/: CMakeLists.txt  README.md  config.ini  main.cpp  toolchainfile.cmake
HMIControllers/inc/: applogic.h  baseinfologic.h  centerviewlogic.h  sharedmemory.hpp  signalvalue.h  smstructdefine.h  telltalesmlogic.h  tracecategories.h  warningpopuplogic.h
HMIControllers/interfaces/: sm_baseinfodata.h  sm_centerview.h  sm_gaugedata.h  sm_telltalesm.h  sm_warningpopupdata.h
HMIControllers/src/: applogic.cpp  baseinfologic.cpp  centerviewlogic.cpp  signalvalue.cpp  sm_baseinfodata.cpp  sm_centerview.cpp  sm_gaugedata.cpp  sm_telltalesm.cpp  sm_warningpopupdata.cpp  telltalesmlogic.cpp  tracecategories.cpp  warningpopuplogic.cpp
appfw/: CMakeLists.txt  README.md  appfwConfig.cmake.in
appfw/include/: application.hpp  log.hpp  module.hpp  timer.hpp
appfw/src/: application.cpp  log.cpp  module.cpp  timer.cpp
appfw/src/configuration/: configuration.cpp  configuration.hpp
systemd_service/: RaiteClusterHMI.service  RaiteClusterHMIController.service
